--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
       </div>
     </div>
 
+    <a class="gh-ribbon" href="https://github.com/VChet/milk-filter" target="_blank">View on GitHub</a>
+
     <script src="script.js" type="module"></script>
   </body>
 </html>
